[no ci][doc] fix dead link

--- a/src/struct_pack/benchmark/CMakeLists.txt
+++ b/src/struct_pack/benchmark/CMakeLists.txt
@@ -1,9 +1,10 @@
 find_package(Protobuf)
 add_executable(struct_pack_benchmark benchmark.cpp no_op.cpp)
 if (Protobuf_FOUND)
+    message(STATUS "Protobuf_FOUND: ${Protobuf_FOUND}")
     protobuf_generate_cpp(STRUCT_PACK_BENCHMARK_PROTO_SRCS
             STRUCT_PACK_BENCHMARK_PROTO_HDRS
-            benchmark.proto
+            data_def.proto
             )
     target_include_directories(struct_pack_benchmark PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
     target_sources(struct_pack_benchmark PRIVATE
@@ -15,7 +16,7 @@ if (Protobuf_FOUND)
     target_compile_definitions(struct_pack_benchmark PRIVATE HAVE_PROTOBUF)
     protobuf_generate_struct_pb(STRUCT_PACK_BENCHMARK_PROTO_SRCS2
             STRUCT_PACK_BENCHMARK_PROTO_HDRS2
-            benchmark.proto
+            data_def.proto
             OPTION "namespace=struct_pb_sample"
             )
     target_sources(struct_pack_benchmark PRIVATE
@@ -32,12 +33,18 @@ else ()
     target_include_directories(struct_pack_benchmark PRIVATE generated_code)
 endif ()
 
-# TODO
-find_package(Msgpack QUIET)
-if (Msgpack_FOUND)
-    message(STATUS "Msgpack_FOUND: ${Msgpack_FOUND}")
-    target_link_libraries(struct_pack_benchmark PRIVATE msgpackc-cxx)
-    target_compile_definitions(struct_pack_benchmark PRIVATE HAVE_MSGPACK)
-    target_compile_definitions(struct_pack_benchmark PRIVATE MSGPACK_NO_BOOST)
-endif()
+target_compile_definitions(struct_pack_benchmark PRIVATE MSGPACK_NO_BOOST)
 target_compile_definitions(struct_pack_benchmark PRIVATE STRUCT_PACK_OPTIMIZE)
+
+find_package(Flatbuffers REQUIRED)
+if (Flatbuffers_FOUND)
+    message(STATUS "Flatbuffers_FOUND: ${Flatbuffers_FOUND}")
+    add_custom_command(
+            TARGET struct_pack_benchmark PRE_BUILD
+            COMMAND flatc ./data_def.fbs --cpp
+            COMMENT "generate flatbuffer"
+            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+            VERBATIM
+    )
+    target_compile_definitions(struct_pack_benchmark PRIVATE HAVE_FLATBUFFER)
+endif()
