--- a/.github/workflows/linux_llvm_cov.yml
+++ b/.github/workflows/linux_llvm_cov.yml
@@ -22,10 +22,12 @@
 name: Ubuntu 22.04 (llvm cov)
 
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - main
       - fix_coverage_show
+
+permissions: write-all
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -34,6 +36,7 @@ concurrency:
 jobs:
   prerequisites:
     runs-on: ubuntu-22.04
+    permissions: write-all
     outputs:
       id: ${{ steps.get-base-commit.outputs.id }}
     steps:
@@ -45,64 +48,56 @@ jobs:
           echo "::set-output name=id::$base_commit_id"
         shell: bash
 
-  base-cov-test:
-    needs: prerequisites
-    runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      issues: write
-      pull-requests: write
-    outputs:
-      data: ${{ steps.base-cov.outputs.data }}
-    steps:
-      - name: 'Checkout source code'
-        uses: actions/checkout@v4
-      - name: 'Base coverage test'
-        id: base-cov
-        uses: ./.github/actions/coverage
-        with:
-          reset-commit-id: ${{ needs.prerequisites.outputs.id }}
-
-  cov-test:
-    needs: prerequisites
-    runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      issues: write
-      pull-requests: write
-    outputs:
-      data: ${{ steps.cov.outputs.data }}
-    steps:
-      - name: 'Checkout source code'
-        uses: actions/checkout@v4
-      - name: 'Coverage test'
-        id: cov
-        uses: ./.github/actions/coverage
-        with:
-          reset-commit-id: ""
-
-  compare-cov-data:
-    needs:
-      - base-cov-test
-      - cov-test
-    runs-on: ubuntu-22.04
-    steps:
-      - name: 'Create comment'
-        run: |
-          content=$(echo "for detail, [goto summary](https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/runs/${{github.run_id}}) download Artifacts \`base-ylt-cov-report\`(base commit coverage report) and \`ylt-cov-report\`(current pull request coverage report)")
-          curl -L -X POST "https://api.github.com/repos/${{github.repository}}/issues/${{github.event.pull_request.number}}/comments" -H "Authorization: Bearer ${{github.token}}" -H 'Content-Type: application/json' -d "{\"body\": \"$content}\""
-        shell: bash
-      - name: 'Compare data'
-        run: |
-            sudo apt install -y bc
-            result=$(echo "${{ needs.cov-test.outputs.data }} > 70" | bc)
-            if [ "$result" -ne 1 ];then
-                echo "coverage cannot be lower than 70%!"
-                exit 1
-            fi
-            result=$(echo "${{ needs.cov-test.outputs.data }} > $(echo "${{ needs.base-cov-test.outputs.data}} * 0.97" | bc)" | bc)
-            if [ "$result" -ne 1 ];then
-                echo "coverage has decreased over 3%!"
-                exit 1
-            fi
-        shell: bash
+        #  base-cov-test:
+        #    needs: prerequisites
+        #    runs-on: ubuntu-22.04
+        #    outputs:
+        #      data: ${{ steps.base-cov.outputs.data }}
+        #    steps:
+        #      - name: 'Checkout source code'
+        #        uses: actions/checkout@v4
+        #      - name: 'Base coverage test'
+        #        id: base-cov
+        #        uses: ./.github/actions/coverage
+        #        with:
+        #          reset-commit-id: ${{ needs.prerequisites.outputs.id }}
+        #
+        #  cov-test:
+        #    needs: prerequisites
+        #    runs-on: ubuntu-22.04
+        #    outputs:
+        #      data: ${{ steps.cov.outputs.data }}
+        #    steps:
+        #      - name: 'Checkout source code'
+        #        uses: actions/checkout@v4
+        #      - name: 'Coverage test'
+        #        id: cov
+        #        uses: ./.github/actions/coverage
+        #        with:
+        #          reset-commit-id: ""
+        #
+        #  compare-cov-data:
+        #    needs:
+        #      - base-cov-test
+        #      - cov-test
+        #    runs-on: ubuntu-22.04
+        #    steps:
+        #      - name: 'Create comment'
+        #        run: |
+        #          content=$(echo "for detail, [goto summary](https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/runs/${{github.run_id}}) download Artifacts \`base-ylt-cov-report\`(base commit coverage report) and \`ylt-cov-report\`(current pull request coverage report)")
+        #          curl -L -X POST "https://api.github.com/repos/${{github.repository}}/issues/${{github.event.pull_request.number}}/comments" -H "Authorization: Bearer ${{github.token}}" -H 'Content-Type: application/json' -d "{\"body\": \"$content}\""
+        #        shell: bash
+        #      - name: 'Compare data'
+        #        run: |
+        #            sudo apt install -y bc
+        #            result=$(echo "${{ needs.cov-test.outputs.data }} > 70" | bc)
+        #            if [ "$result" -ne 1 ];then
+        #                echo "coverage cannot be lower than 70%!"
+        #                exit 1
+        #            fi
+        #            result=$(echo "${{ needs.cov-test.outputs.data }} > $(echo "${{ needs.base-cov-test.outputs.data}} * 0.97" | bc)" | bc)
+        #            if [ "$result" -ne 1 ];then
+        #                echo "coverage has decreased over 3%!"
+        #                exit 1
+        #            fi
+        #        shell: bash
